front/less/pages/product.less
@import "../common/variables";
@import "../common/utilities/mixins";
@import "../common/utilities/sprite-main";

@i-star-full: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2217.467%22%20height%3D%2217.251%22%20fill%3D%22%231d5d87%22%20viewBox%3D%220%200%2017.467%2017.251%22%3E%3Cpath%20d%3D%22M13.565%2010.93l1.3%206.32-6.13-2.6-5.574%202.6.92-6.32L0%206.623%205.856%205.51%208.362%200l2.602%205.545%206.503%201.078-3.902%204.306z%22%2F%3E%3C%2Fsvg%3E");
@i-star-empty: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2217.386%22%20height%3D%2216.953%22%20fill%3D%22%231d5d87%22%20viewBox%3D%220%200%2017.386%2016.953%22%3E%3Cpath%20d%3D%22M17.386%206.406l-1.81-.3-4.496-.746-1.772-3.544L8.4%200l-.886%201.827-1.708%203.52-4.01.763L0%206.452%201.258%207.78l2.8%202.958-.634%204.382-.266%201.833%201.678-.783%203.882-1.812%204.305%201.825%201.754.744-.385-1.865-.897-4.364%202.66-2.934%201.23-1.358zm-4.972%203.996l1%204.86-4.715-2-4.29%202%20.705-4.86-3.134-3.31%204.503-.856L8.41%202.263l2%204%205%20.83-3%203.31z%22%2F%3E%3C%2Fsvg%3E");
@i-star-half: url("data:image/svg+xml,%3Csvg%20width%3D%2217%22%20height%3D%2217%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20stroke-linejoin%3D%22round%22%20stroke-miterlimit%3D%221.414%22%3E%3Cpath%20d%3D%22M3.16%2017.25l.92-6.32L0%206.623%205.856%205.51%208.362%200l2.602%205.545%206.503%201.078-3.902%204.306%201.3%206.32-6.13-2.6-5.574%202.6zm1.98-6.656l7.425-.05%202.93-3.234-5.213-.864-1.906-4.062-1.824%204.012-4.567.868%203.155%203.33z%22%20fill%3D%22%231d5d87%22%20fill-rule%3D%22nonzero%22%2F%3E%3C%2Fsvg%3E");

.product {
  &-h1 {
    margin: 0 0 15px;

    .Q(@md; {
      display: inline;
      margin: initial;
    });
  }

  &-article {
    background: @c-text-grey-light;
    border-radius: 2px;
    color: @c-white;
    display: inline-block;
    font-size: @f-size-base;
    margin: 0 0 0 6px;
    font-family: @font-family-base;
    padding: 3px 10px;
    position: relative;
    top: 3px;
    vertical-align: top;
  }

  &-top {
    overflow: hidden;
    position: relative;

    .Q(@md; {
      padding: 19px 0 28px;
    });

    .ya-share2 {
      margin: 0 0 10px 13px;
    }
  }

  &-text {
    font-size: @f-size-base - 2;
    line-height: 120%;
    margin-bottom: 27px;

    .more-content {
      display: none;
    }
  }

  &-stock {
    color: @text-color;
    font-size: @f-size-base;
    margin-bottom: 15px;

    .Q(@md; {
      margin-bottom: 18px;
      padding: 0 18px;
    });
  }

  &-one-click {
    .font-bold;
    font-size: @f-size-base + 2;
    text-align: center;
  }

  &-additional {
    clear: both;
    color: @c-text-muted;
    font-size: @f-size-base - 2;
    padding: 15px 0 0;

    .Q(@md; {
      padding: 20px 20px 0;
    });
  }
}

.product-price {
  color: @c-text-blue;
  font-size: @f-size-base + 12;
  margin: 0 0 10px;

  .Q(@md; {
    font-size: @f-size-base + 16;
    margin: 0;
    padding: 0 20px;
  });

  &.active {
    display: block;
  }

  &-old {
    .font-light;
    font-size: @f-size-base + 4;
    margin: -3px 0 21px;
    padding: 0 20px;
    text-decoration: line-through;
  }

  &-btn-wrapper {
    display: block;
    float: left;
    margin: 0 13px 0 0;
    width: 101px;

    .Q(@sm; {
      margin: 0 13px 0 18px;
    });
  }
}

.product-price-wrapper {
  .teaser-shadow;
  background: @c-light-grey-plate-bg;
  border-radius: 2px;
  margin: 0 0 20px;
  padding: 15px;
  position: relative;
  z-index: 0;

  .Q(650; {
    float: left;
    width: 58%;
  });

  .Q(@sm; {
    width: 50%;
  });

  .Q(@md; {
    margin: 0 15px 0 0;
    min-height: @height-product-block-pc;
    padding: 0;
    width: 355px;
  });
}

.product-bottom {
  float: left;
  width: 355px;
  padding-right: 18px;
}

.product-desc {
  width: 100%;

  p {
    line-height: 140%;
  }

  &-title {
    .font-bold;
    font-size: @f-size-base + 4;
    margin-bottom: 6px;
  }

  &-text {
    color: @c-text-grey-light;
    font-size: @f-size-base - 2;
    margin-top: -2px;
  }
}

.product-tags {
  width: 100%;

  &-title {
    .font-bold;
    font-size: @f-size-base + 4;
    margin-bottom: 12px;
  }

  &-table {
    width: 100%;
    font-size: @f-size-base - 2;

    td {
      width: 50%;
    }

    tr:nth-child(2n+1) {
      background-color: @c-grey-body-main-lighten;

      td {
        padding: 5px 7px;
      }
    }

    tr:nth-child(2n) {
      background-color: @c-grey-body-main;

      td {
        padding: 13px 7px;
      }
    }
  }
}


.product {
  &-images {
    margin: 0 0 20px;

    .Q(650; {
      float: left;
      margin: 0 2% 0 0;
      width: 40%;
    });

    .Q(@sm; {
      float: left;
      margin: 0 2% 0 0;
      width: 48%;
    });

    .Q(@md; {
      margin: 0 26px 0 0;
      width: 331px;
    });
  }

  &-image-big {
    .white-plate;
    cursor: pointer;
    display: flex;
    height: @height-product-block-mob;
    position: relative;
    margin-bottom: 15px;

    .Q(@sm; {
      height: @height-product-block-pc;
    });
  }

  &-image-small {
    .white-plate;
    cursor: pointer;
    float: left;
    height: 59px;
    margin: 0 9px 5px 0;
    overflow: hidden;
    padding: 3px;
    position: relative;
    width: 59px;

    .Q(@md; {
      margin: 0 9px 0 0;
    });
  }
}

.product-label-price {
  &-retail {
    color: @c-tooltip;
    font-size: @f-size-base - 2;

    .Q(@md; {
      margin: 0;
      padding: 10px 0 0 20px;
    });
  }

  &-whole {
    color: @c-tooltip;
    font-size: @f-size-base - 2;
    margin: 0;
    padding: 0 0 10px;

    .Q(@md; {
      padding: 0 0 10px 20px;
    });
  }
}

.product-one-click-phone {
  margin: 0 0 15px;

  .Q(@xs; {
    float: left;
    margin: 0 2% 0 0;
    width: 49%;
  });

  .Q(@md; {
    margin: 0 11px 0 18px;
    width: 160px;
  });
}

.pr-chars {
  clear: both;
  overflow: hidden;

  .Q(@md; {
    clear: none;
  });

  &-list {
    .transition;
    margin-bottom: 15px;
    overflow: hidden;
  }

  &-item {
    margin-bottom: 10px;
  }

  &-name {
    display: inline-block;
    vertical-align: top;
    width: 118px;
  }

  &-delivery {
    color: @c-grey-lighten-text-delivery;
    margin: 0 0 30px;

    .Q(@md; {
      float: left;
      margin: 0;
      padding: 19px 0 25px 18px;
      width: 467px;
    });

    &-text {
      .font-bold;
      color: @c-text-grey-dark;
      display: block;
      font-size: @f-size-base + 2;
      margin-bottom: 15px;
    }
  }
}

.pr-chars-order {
  color: @c-grey-lighten-text-delivery;

  .Q(@md; {
    padding: 0 0 0 10px;
  });

  &-caption {
    color: @c-text-grey-dark;
    font-size: @f-size-base + 2;
  }

  &-list {
    padding: 0 0 0 20px;

    li {
      padding: 0 0 10px;
    }
  }
}

.pr-chars-delivery .pr-delivery-link {
  margin-bottom: 10px;
}

.pr-delivery-list-item {
  .Q(@md; {
    float: left;
    padding: 0 0 10px 0;
    width: 50%;
  });
}

.btn-to-basket {
  margin: 0 0 20px;

  .Q(@md; {
    width: 208px;
  });
}

.btn-order {
  display: block;
  width: 100%;

  .Q(@xs; {
    width: 49%;
  });

  .Q(@md; {
    width: 142px;
  });
}

table.product-table {
  border-color: @c-price-border-color;
  margin: 0 0 15px;

  .Q(@md; {
    margin: 0 -1px 20px;
    width: 357px;
  });

  thead th,
  tbody td {
    .font-light;
    border-bottom: @c-price-border-color;
    color: @text-color;
    font-size: @f-size-base - 2;
    padding: 3px 9px;
    text-align: center;
    width: 33.33%;
  }
}

// ================================================================
// FEEDBACK
// ================================================================
.feedback {
  clear: both;

  &-heading {
    font-size: @f-size-base + 4;
    margin: 0;
    white-space: nowrap;

    &-wrapper {
      background-color: @c-basket-fill;
      padding: 15px 50px 15px 20px;
      position: relative;
    }
  }

  &-remove {
    .sprite(@i-close);
    cursor: pointer;
    margin: -8px 0 0;
    opacity: 1;
    position: absolute;
    right: 15px;
    top: 25px;

    &:hover {
      .sprite-position(@i-close-active);
    }
  }
}

.rating-filter {
  font-size: 0;
  margin: 0;
  padding: 0;

  & > li:not(:last-child) {
    margin: 0 0 6px;
  }

  .checkbox + label {
    height: 17px;
    margin: 0 8px 0 0;
    vertical-align: middle;
    width: 17px;
  }
}

.rating-list {
  display: inline-block;
  font-size: 0;
  margin: 4px 0 2px;
  padding: 0;
  vertical-align: middle;
}

.rating-icon {
  background-repeat: no-repeat;
  background-size: contain;
  box-sizing: content-box;
  display: inline-block;
  height: 24px;
  padding: 0 5px 0 0;
  vertical-align: top;
  width: 24px;

  .Q(@sm; {
    height: 18px;
    width: 18px;
  });

  .modal-rating-wrapper & {
    cursor: pointer;
  }

  &-full {
    background-image: @i-star-full;
  }

  &-empty {
    background-image: @i-star-empty;
  }

  &-half {
    background-image: @i-star-half;
  }
}

.feedback-block {
  .white-plate;
  margin: 10px 0;
  overflow: hidden;
  position: relative;

  &-content {
    padding: 10px 20px 15px;

    .Q(430; {
      display: flex;
      justify-content: space-between;
    });
  }

  &-empty {
    padding: 20px 20px 15px;
  }
}

.rating-label {
  font-weight: bold;
}

.rating-review {
  &-item {
    margin: 0 0 5px;
  }

  &-rating {
    color: @c-text-muted;
    line-height: 18px;
    margin: 0 0 10px;

    .rating-icon {
      margin: 1px 1px 0 0;
      height: 12px;
      width: 13px;
    }
  }
}

.rating-total {
  margin: 0 0 25px;

  .Q(430; {
    margin: 0;
  });

  &-num {
    font-size: 62px;
    line-height: 50px;
    margin-right: 10px;

    .Q(@sm; {
      float: left;
    });
  }

  &-rating {
    line-height: 25px;
    margin: 0 0 20px;
    min-height: 50px;
    white-space: nowrap;
  }
}

.modal-rating-wrapper {
  .Q(@sm; {
    padding: 12px 0 0;
  });
}

